# tree-sitter-bara

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-bara.h  tree-sitter-bara.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_bara/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterBaraTests/: TreeSitterBaraTests.swift
examples/: Array.bara  Conditional.bara  DFS.bara  Declaration.bara  Fibonacci.bara  Fibonacci2.bara  For.bara  Function.bara  Lambda.bara  LinkedList.bara  List.bara  Literals.bara  Match.bara  SimpleProgram.bara  Struct.bara  Tuple.bara  While.bara
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: Array.txt  Conditional.txt  DFS.txt  Declaration.txt  Fibonacci.txt  Fibonacci2.txt  For.txt  Function.txt  If.txt  Lambda.txt  LinkedList.txt  List.txt  Literals.txt  Match.txt  SimpleProgram.txt  Struct.txt  Tuple.txt  While.txt
